Fix overflowing images in forum posts/responses

--- a/lms/static/sass/discussion/views/_thread.scss
+++ b/lms/static/sass/discussion/views/_thread.scss
@@ -134,6 +134,10 @@ body.discussion {
         border-radius: 3px;
       }
     }
+
+    img {
+      max-width: 100%;
+    }
   }
 
   .discussion-response .response-body {
